--- a/_posts/2018-04-27-This-Town.markdown
+++ b/_posts/2018-04-27-This-Town.markdown
@@ -2,7 +2,7 @@
 layout: Page
 title: "This Town"
 date: 2018-04-27 00:50:34 -0400
-author: "Victor Perez"
+author: "Victor J Perez III"
 categories: nonfiction
 image: "morgantown.jpg"
 ---
