--- a/_posts/2019-11-12-Vomit.markdown
+++ b/_posts/2019-11-12-Vomit.markdown
@@ -2,7 +2,7 @@
 layout: Page
 title: "Vomit"
 date: 2019-11-12 05:50:34 -0400
-author: "Victor J. Perez III - II"
+author: "Victor J Perez III - II"
 categories: [nonfiction]
 image: "vomit.png"
 excerpt_separator: <!--more-->
