--- a/_posts/2019-11-12-Sisyphus.markdown
+++ b/_posts/2019-11-12-Sisyphus.markdown
@@ -34,7 +34,7 @@ When it came time to hire a new General Manager, I was there at the interview. W
 
 <center><b><i>Sue Me</i></b></center>
 
-I’ve never burned out harder than in my second semester as “Assistant Program Director.” Putting all of my free time into the station for so long was not healthy, and the one I was assisting was not doing their job. So I went to the recently hired General Manager and told them that I could not keep things up. And then I told them again: something needed to be done. After the third time, I sat down for an hour and told them I was at the end of what I could handle. The answer was the same as the first two: put up with things for now, and eventually, it will get better.
+I’ve never burned out harder than in my second semester as "Assistant Program Director.” Putting all of my free time into the station for so long was not healthy, and the one I was assisting was not doing their job. So I went to the recently hired General Manager and told them that I could not keep things up. And then I told them again: something needed to be done. After the third time, I sat down for an hour and told them I was at the end of what I could handle. The answer was the same as the first two: put up with things for now, and eventually, it will get better.
 
 I did not take their advice. I was exhausted, at the end of my capacity. So I went to the Senate, the meeting of directors. At the end of that meeting, I announced that I felt as though I was doing more than I could keep up with, and if things did not get better in a month I would resign. The meeting was concluded, the Program Director wept, the boulder cracked.
 
