--- a/_posts/2019-11-12-On-Vestoj.markdown
+++ b/_posts/2019-11-12-On-Vestoj.markdown
@@ -14,13 +14,13 @@ To write creative nonfiction is to let yourself be vulnerable. You lay bare scar
 
 <!--more-->
 
-After reading the article _Beggars And Choosers_ by Johannes Lenhard, I was hooked. Lenhard wasn’t just talking about clothes or runway shows. He wrote about poverty, and psychology, and how they could be viewed under the lens of fashion. It’s a rare thing to have a conversation about, and Vestoj housed a goldmine of articles just like it. I wasn’t seeing random people talk about dressing for dates, or the new streetwear “label” (five graphic t-shirts) they were creating. I was seeing the connection between fashion and everyday life.
+After reading the article _Beggars And Choosers_ by Johannes Lenhard, I was hooked. Lenhard wasn’t just talking about clothes or runway shows. He wrote about poverty, and psychology, and how they could be viewed under the lens of fashion. It’s a rare thing to have a conversation about, and Vestoj housed a goldmine of articles just like it. I wasn’t seeing random people talk about dressing for dates, or the new streetwear "label” (five graphic t-shirts) they were creating. I was seeing the connection between fashion and everyday life.
 
 Of course, I’m explaining it in the most dramatic way possible, if only to mirror the feeling I was overcome with upon my discovery. As soon as the eighth issue, _On Authenticity_, was released, I paid \$30 for a copy and read it cover to cover.
 
 Immediately, the essay _Acting As If_ by Michelle Millar Fisher jumped out at me. It details the link between wearing counterfeit clothing and feeling fake or inauthentic. Beyond that, those emotions influenced the actions of the wearers to be more dishonest, as well as perceiving others as more dishonest. That observation can be extended to individual thoughts and actions of a person; to believe you are something and act like it is to be that thing. This is the basis for cognitive behavioral therapy, which I eventually came to use a great deal to become free of my perceived self.
 
-That same week, I hosted a “No Limits” radio station (A four hour segment of whatever audio content you could dream of), and read the article _The Making of a Star_ by Philippa Snow, another impactful essay on performativity, live on air while Aphex Twin played in the background. I wanted everyone to hear what these people had to say.
+That same week, I hosted a "No Limits” radio station (A four hour segment of whatever audio content you could dream of), and read the article _The Making of a Star_ by Philippa Snow, another impactful essay on performativity, live on air while Aphex Twin played in the background. I wanted everyone to hear what these people had to say.
 
 Vestoj remains an important part of my life, enough to have a special place in this journal. Nearly everything I write and design, from print to website, is inspired by it. It’s fueled my interest in fashion and society, and even my own writing. I’m grateful to the London College of Fashion for funding it, and for Anja Aronowsky Cronberg for their founding and editing contributions.
 
